fix modal overlay blur on safari

--- a/app/common/components/Modal/styles.scss
+++ b/app/common/components/Modal/styles.scss
@@ -36,5 +36,7 @@
   inset: 0;
 
   backdrop-filter: blur(0.5rem);
+  -webkit-backdrop-filter: blur(0.5rem);
+
   background-color: rgba(#121212, 0.8);
 }
